--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
