--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r dotenv/config src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run --coverage",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,12 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "3.2.3",
+    "jest": "^30.0.0",
+    "supertest": "^7.1.1",
+    "vitest": "^3.2.3"
   }
 }
